# Activity_Tracker

./: CMakeLists.txt  Controller.cpp  Controller.h  MainWindow.ui  Model.cpp  Model.h  Observer.h  Project.cpp  Project.h  README.md  Subject.h  Task.cpp  Task.h  View.cpp  View.h  ViewWindow.cpp  ViewWindow.h  english-gec-with-transformers.ipynb  main.cpp
activity_tracker_test/: CMakeLists.txt  MVCFixture.cpp  ProjectFixture.cpp  TaskFixture.cpp  runAllTests.cpp
